test/analyze/type_check/array/basic.myte
module test

import std.memory.Array

fun unify<T>(x: Array<T>, y: Array<T>) {}

fun testUnifying(a1: Array<Int>, a2: Array<Int>, a3: Array<Bool>) {
  // Same type
  unify(a1, a2);
 
  // Different types
  unify(a1, 1);
  unify(a1, a3);
}

fun testSubtyping(a1: Array<Int>) {
  // Correct
  (a1: Array<Int>);

  // Incorrect
  (a1: Int);
  (a1: Array<Bool>);
}

fun main() {}